website/websites/u32q/code/chameneosredux.1.scala.log

Mon, 21 Jan 2013 04:32:50 GMT

MAKE:
mv chameneosredux.scala chameneosredux.scala
mv: `chameneosredux.scala' and `chameneosredux.scala' are the same file
make: [chameneosredux.scala_run] Error 1 (ignored)
/usr/local/src/scala-2.10.0/bin/scalac -optimise chameneosredux.scala
chameneosredux.scala:33: error: value foreach is not a member of object chameneosredux.Color
      Color.foreach(c1 => Color.foreach(c2 => {
            ^
chameneosredux.scala:121: warning: This catches all Throwables. If this is really intended, use `case _ : Throwable` to clear this warning.
    val n = try { args(0).toInt } catch { case _ => 600 }
                                               ^
one warning found
one error found
make: [chameneosredux.scala_run] Error 1 (ignored)
3.04s to complete and log all make actions

COMMAND LINE:
 /usr/local/src/jdk1.7.0_11/bin/java -server -XX:+TieredCompilation -XX:+AggressiveOpts  -Xbootclasspath/a:/usr/local/src/scala-2.10.0/lib/scala-library.jar:/usr/local/src/scala-2.10.0/lib/akka-actors.jar:/usr/local/src/scala-2.10.0/lib/typesafe-config.jar chameneosredux 60000

PROGRAM FAILED 


PROGRAM OUTPUT:

Error: Could not find or load main class chameneosredux
